--- a/localisation/braz_por/replace/replaced_from_vanilla_modifiers_l_braz_por.yml
+++ b/localisation/braz_por/replace/replaced_from_vanilla_modifiers_l_braz_por.yml
@@ -2153,7 +2153,7 @@
  military_factories_productivity: "Produtividade das §Y$arms_factory$§!"
  dockyard_productivity: "Produtividade dos §Y$dockyard$§!"
  offices_productivity: "Produtividade dos §Y$offices$§!"
- agricolture_productivity_modifier: "Produtividade Agrícola"
+ agricolture_productivity_modifier: "Produtividade §8Agrícola§!"
  high_unemployment_threshold_modifier: "Limiar Elevado de Desemprego"
  resource_sector_workers_modifier: "Trabalhadores necessários na Extração de Recursos"
  gdp_from_resource_sector_modifier: "Geração de PIB do Setor de Recursos"
