--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -2139,7 +2139,7 @@
  military_factories_productivity: "Productivité des §Y$arms_factory$§!"
  dockyard_productivity: "Productivité des §Y$dockyard$§!"
  offices_productivity: "Productivité des §Y$offices$§!"
- agricolture_productivity_modifier: "Productivité de l'agriculture"
+ agricolture_productivity_modifier: "Productivité de l'§8agriculture§!"
  high_unemployment_threshold_modifier: "Seuil de chômage élevé"
  resource_sector_workers_modifier: "Travailleurs nécessaires à l'extraction des ressources"
  gdp_from_resource_sector_modifier: "Génération du PIB par le secteur des ressources"
