--- a/localisation/polish/replace/replaced_from_vanilla_modifiers_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_vanilla_modifiers_l_polish.yml
@@ -2153,7 +2153,7 @@
  military_factories_productivity: "Produktywność §Y$arms_factory$§!"
  dockyard_productivity: "Produktywność §Y$dockyard$§!"
  offices_productivity: "Produktywność §Y$offices$§!"
- agricolture_productivity_modifier: "Produktywność rolnictwa"
+ agricolture_productivity_modifier: "Produktywność §8rolnictwa§!"
  high_unemployment_threshold_modifier: "Wysoki próg bezrobocia"
  resource_sector_workers_modifier: "Pracownicy potrzebni do wydobywania surowców"
  gdp_from_resource_sector_modifier: "Generowanie PKB w sektorze zasobów"
