--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2096,7 +2096,7 @@
  military_factories_productivity: "§Y$arms_factory$§!生产率"
  dockyard_productivity: "§Y$dockyard$§!生产率"
  offices_productivity: "§Y$offices$§!生产率"
- agricolture_productivity_modifier: "农业生产率"
+ agricolture_productivity_modifier: "§8农业§!生产率"
  high_unemployment_threshold_modifier: "最高失业阈值"
  resource_sector_workers_modifier: "资源开采所需的工人"
  gdp_from_resource_sector_modifier: "资源部门GDP产出"
