--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -756,6 +756,7 @@
  TAI_category_desc: "Decisions regarding the nation of Taiwan."
  TAI_coast_guard: "Establish the Coast Guard Administration"
  TAI_kaoshiung_university: "Open The National University of Kaohsiung"
+ TAI_remove_rival_government: "Remove Rival Government"
 
  ##### IRAQ #####
  IRQ_MOBILIZE: "Shia Militias"
