--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -418,6 +418,7 @@
  TAI_reunification_less_likely_tt: "§Y[TAI.Getnamewithflag]§! is more likely to §Rreject§! the \"Roadmap to Reunification\"\n"
  TAI_influence_CHI_tt: "§Y[CHI.GetNameWithFlag]§! gains §Y20§! influence in §Y[TAI.GetNameWithFlag]§!\n"
  anti_infiltration_bill_tt: "Reduces China's ability to conduct propaganda campaigns in our territory\n"
+ TAI_recover_china_TT: "All state with §Y[TAI.Getnamewithflag]§!'s Begonia leaf claim should be under your control."
  reunification: "§Y[CHI.GetNameWithFlag]§! has not proclaimed that §Y[HKG.GetNameWithFlag]§! will return to its control in 2047\n"
  troops_deployed: "Has Chinese Troops deployed\n"
  CHI_shift_away_shanghai_clique_tt: "The power of the §YShanghai Clique§! will decrease\n"
