Balance changes and minor adjustments

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -7,7 +7,7 @@
  ###########
  
  GRN_Extreme_Temperature_Traning:0 "Extreme Tempreture Training"
- GRN_Extreme_Temperature_Traning_desc:0 "The ETT program is designed to get our soldiers well adapted to the harsh and desolate polar climate of our island and of the wider for long term security missions and rapid acclimatization in the line of fire."
+ GRN_Extreme_Temperature_Traning_desc:0 "The ETT program is designed to get our soldiers well adapted to the harsh and desolate polar climate of our island and for wider, long term security missions and rapid acclimatization in the line of fire."
  
  GRN_Greenlandic_Army:0 "Greenlandic Army"
  GRN_Greenlandic_Army_desc:0 "The Armed Forces of Greenland is limited by the amount of people who can join the army. But this only motivates us to improving the quality and investments of the services and equipment within our army."
@@ -28,7 +28,7 @@
  GRN_Scientific_Advancements_desc:0 "Our nation is progressing further and further everyday! Our efforts to develop a world-class scientific programs and modernize society is starting to pay off."
  
  GRN_New_Arctic_Home:0 "New Arctic Home"
- GRN_New_Arctic_Home_desc:0 "We have opened up our nation to refugees from all over the world. While our offices are currently working overtime to make sure every immigrant is accounted for, it will be of great benefit to us to let in these migrants in the long term."
+ GRN_New_Arctic_Home_desc:0 "We have opened up our nation to refugees from all over the world. While our offices are currently working overtime to make sure every immigrant is accounted for, it will be of great benefit to us to let in these migrants in our country in the long term."
  
  GRN_Millennial_Colony:0 "The Millennial Colony"
  GRN_Millennial_Colony_desc:0 "Since the Viking Age, Greenland has found itself bound within Nordic political affairs. With the many attempts to colonize the island, the island and its inhabitants bears rememberance of its over 1000 year long history of contact with the Norsemen and their descendents."
@@ -98,20 +98,28 @@
  ##########
  
  native_inuit_spiritualism:0 "Inuit Spiritualism"
- native_inuit_spiritualism_desc:0 "Inuit spiritualistic beliefs are comprised of local folklore and mythologies that have been recited orally by generations of shamans and elders dating back thousands of years. The Inuit believe in a pantheon of deities that preside over the occurences of natural phenomenon and of the environment and also believe that within living entities, be it animal, human, supernatual entity, and even plants, resides within them a spirit or 'breath' known as 'Anirniit'. It is said that because everything has a spirit, it's considered just as grave offence to kill another lifeform without following proper rituals, as it is no different to killing a fellow human. The 'anirniit' is considered as an integral part of the surrounding ambience known as 'Sila', and many Inuit pay tribute and gain charactarisics of a certain spirit by taking its name or further more invoked by those who share a connection to the spirit."
+ native_inuit_spiritualism_desc:0 "Inuit spiritualistic beliefs are comprised of local folklore and mythologies that have been recited orally by generations of shamans and elders dating back thousands of years. The Inuit believe in a pantheon of deities that preside over the occurences of natural phenomenon and of the environment and also believe that within living entities, be it animal, human, supernatual entity, and even plants, resides within them a spirit or 'breath' known as 'Anirniit'.\n\nIt is said that because everything has a spirit, it's considered just as grave of an offense to kill another lifeform without following proper rituals, as it is no different to murdering a fellow human. The 'anirniit' is considered as an integral part of the surrounding ambience known as 'Sila', and many Inuit pay tribute and gain charactarisics of a certain spirit by taking its name or further more invoked by those who share a connection to the spirit."
  # Make Inuit Nunangat file
 
- GRN_military_tip_tt:0 "§5'In the everlating light of midsummer days and ever embracing darkness of midwinter nights, our men and women will hold the line of fire.'§!"
+ GRN_military_tip_tt:0 "§5'In the everlasting light of midsummer days and in the ever embracing darkness of midwinter nights, our men and women will hold the line of fire.'§!"
  
  ###########
  ## NOTES ##
  ###########
 
- GRN_army_upgrade_tt:0 "If you have §GGreenlandic army§! national spirit, it will be §GImproved§!"
+ GRN_army_upgrade_tt:0 "If you have the §GGreenlandic army§! national spirit, it will be §GImproved§!"
 
  GRN_not_independance_tt:0 "§RYou won't be able to become independent!§W\n"
  
  GRN_independance_tt:0 "§GGrants your independence! More of the focus tree will become available to you.§W\n"
+
+ GRN_high_command_tt:0 "§8Greenlandic High Command§!"
+
+ GRN_army_institute_tt:0 "§7Nuuk Military University§!"
+
+ GRN_navy_institute_tt:0 "§2Sisimuit Naval University§!"
+
+ GRN_air_institute_tt:0 "§tKangerlussuaq Aviation School§!"
 
  ########################
  ## NATIONAL WELLBEING ##
@@ -340,29 +348,6 @@
  
  GRN_Expand_Kangerlussuaq_Airport:0 "Expand Kangerlussuaq Airport"
  GRN_Expand_Kangerlussuaq_Airport_desc:0 "Kangerlussuaq airport is the largest air transport hub on the island. Investing in it would allow us to stock more planes and facilitate international flights more easily."
- 
- #############
- ## NUCLEAR ##
- #############
-
- GRN_Learning_from_Crested_Ice:0 "Learning from Crested Ice"
- GRN_Learning_from_Crested_Ice_desc:0 "In the 1950's and 60's, the United States operated a series of B52 Stratofortresses armed with nuclear weapons over the high arctic in an ordinance known as Operation Chrome Dome. In 1968, a Stratofortesses made a crash landing while attempting to land at Thule air base. We must now look bak and analyze the situation and the ethic behind the situation, before playing with nuclear fire."
-
- GRN_Buy_Spare_Parts:0 "Buying Spare Parts"
- GRN_Buy_Spare_Parts_desc:0 "To further develop our nuclear refurbishing program, we must try to obtain parts and machinery in order to recreate or restore the weapons we plan on using."
-
- GRN_Project_S:0 "Project Sanna"
- GRN_Project_S_desc:0 "Sanna or Sedna is the name of the Inuit goddess of the sea and master of marine life. As a tribute to her role as an important source of substinance, we shall name our ballistic submarine program in honour her."
-
- GRN_Project_Ice_Shield:0 "Project Ice Shield"
- GRN_Project_Ice_Shield_desc:0 "It's now time to put our work to the test. Let us show the world what we wea are capble of when we can properly handle a nuclear weapon asnd use it as a tool for diplomacy and proctection of the interst of the indigenous peoples of the Arctic"
- 
- ###########
- ## SPACE ##
- ###########
-
- GRN_Project_N:0 "Project Nuutuittuq"
- GRN_Project_N_desc:0 "Nuutuittuq is the name of the North Pole star, Polaris. As a tribute to such, we shall name our ballistic missile program after it since it will allow us to get ever closer to reaching the stars."
 
  #############
  ## ECONOMY ##
@@ -512,7 +497,7 @@
  GRN_Economic_Integration:0 "Economic Integration"
  GRN_Economic_Integration_desc:0 ""
  
- GRN_Danish_ties:0 "Danish ties"
+ GRN_Negotiations_with_Copenhagen:0 "Negotiations with Copenhagen"
  GRN_Danish_ties_desc:0 "We need to decide future of our relations with our overlords, Denmark"
  
  GRN_Referendum_on_Independence:0 "A Referendum on Independence"
@@ -561,7 +546,7 @@
  GRN_A_Hand_in_Refreshment_Making:0 "A Hand in Refreshment Making"
  GRN_Greenlandic_Resources:0 "Greenlandic Resources"
  GRN_Offshore_Petroleum_Extraction:0 "Offshore Petroleum Extraction"
- GRN_The_Arctic_Petroleum_Superpower:0 "REPLACE_ME"
+ GRN_The_Arctic_Petroleum_Superpower:0 "Petroleum-Based Sovereign Wealth Fund"
  GRN_Export_Nuclear_Fuel_Abroad:0 "Exporting Nuclear Fuel Abroad"
  GRN_Democratic_Path_Foward:0 "The Democratic Path Foward"
  GRN_Climate_Change_Inititives:0 "Climate Change Initiaves"
@@ -598,7 +583,7 @@
  GRN_Joining_United_Nations:0 "Joining the United Nations"
  GRN_Forging_Global_Ties:0 "Forging Global Ties"
 
- GRN_American_Techical_Mastery:0 "American Cultural Hegemony"
+ GRN_American_Techical_Mastery:0 "American Technical Mastery"
  GRN_Mexican_Engineering:0 "Mexican Engineering Advise"
  GRN_Canadian_Investments:0 "Canadian Financial Investment"
  GRN_NAFTA_Cooperation:0 "Further Cooperation with NAFTA"
@@ -613,7 +598,7 @@
  GRN_German_STEM:0 "REPLACE_ME"
  GRN_French_Military_Traditions:0 "REPLACE_ME"
  GRN_eu1:0 "REPLACE_ME"
- GRN_Erasmus_Program:0 "REPLACE_ME"
+ GRN_Erasmus_Program:0 "Erasmus+ Exchange Program"
 
  GRN_Belarusian_Agricultural_Collectives:0 "Belarusian Style Agricultural Collectives"
  GRN_Kazakhstani_Resource_Investors:0 "Security Training with the Kazakhs"
@@ -634,12 +619,12 @@
  airdoctrine_bonus:0 "REPLACE_ME"
  
  GRN_Join_NAFTA:0 "Joining NAFTA"
- GRN_Join_Commonwealth:0 "REPLACE_ME"
+ GRN_Join_Commonwealth:0 "Honorary Commonwealth Realm"
  GRN_Rejoin_European_Union:0 "Rejoining the European Union"
  GRN_Join_Eurasian_Union:0 "Joining the Eurasian Union"
  GRN_Join_SCO:0 "REPLACE_ME"
  GRN_Join_NATO:0 "Enhanced Commitment to NATO"
- GRN_Join_CSTO:0 "REPLACE_ME"
+ GRN_Join_CSTO:0 "A new page in the CSTO manual"
  GRN_Reintegrate_into_the_Realm:0 "A New Danish Commonwealth"
  
  GRN_High_Command_desc:0 "REPLACE_ME"
