--- a/localisation/english/MD_focus_INU_I_english.yml
+++ b/localisation/english/MD_focus_INU_I_english.yml
@@ -2,11 +2,25 @@ l_english:
  #header
  inuit_nunangat_focus:0 "Inuit Focus Tree"
 
- ###############
- ## GAME RULE ##
- ###############
+ #############
+ ## NUCLEAR ##
+ #############
 
- INU_AI_BEHAVIOR: "@INU Inuit Nunangat"
- RULE_INU_test: "Inuit Test"
- RULE_INU_test_ALLOWED_DESC: "Polar shenanigans will ensue..."
- RULE_INU_test_BLOCKED_DESC: "The arctic will quitetly go on, business like usual, just as it normally does..."
+ INU_Learning_from_Crested_Ice:0 "Learning from Crested Ice"
+ INU_Learning_from_Crested_Ice_desc:0 "In the 1950's and 60's, the United States operated a series of B52 Stratofortresses armed with nuclear weapons over the high arctic in an ordinance known as Operation Chrome Dome. In 1968, a Stratofortesses made a crash landing while attempting to land at Thule air base, contaminating the environmant, and was covered up by authorities. We must now look back and analyze the ethics behind the situation, before playing with nuclear fire."
+
+ INU_Buy_Spare_Parts:0 "Buying Spare Parts"
+ INU_Buy_Spare_Parts_desc:0 "To further develop our nuclear refurbishing program, we must try to obtain parts and machinery in order to recreate or restore the weapons we plan on using."
+
+ INU_Project_S:0 "Project Sanna"
+ INU_Project_S_desc:0 "Sanna or Sedna is the name of the Inuit goddess of the sea and master of marine life. As a tribute to her role as an important source of substinance, we shall name our ballistic submarine program in honour her."
+
+ INU_Project_Ice_Shield:0 "Project Ice Shield"
+ INU_Project_Ice_Shield_desc:0 "It's now time to put our work to the test. Let us show the world what we are capable of when a nation can properly handle a nuclear weapon and use it as a tool for diplomacy not as a means of threatening others. We shall use it for protecting the interests of the indigenous peoples of the Arctic"
+ 
+ ###########
+ ## SPACE ##
+ ###########
+
+ INU_Project_N:0 "Project Nuutuittuq"
+ INU_Project_N_desc:0 "Nuutuittuq is the name of the North Pole star, Polaris. As a tribute to such, we shall name our ballistic missile program after it since it will allow us to get ever closer to reaching the stars."
