--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -78,7 +78,16 @@
  RULE_CUB_Tesak: "The Power of the Tesak"
  RULE_CUB_Tesak_ALLOWED_DESC: "The Famous Russian Nationalist \"Tesak\" will come to power in Cuba"
  RULE_CUB_Tesak_BLOCKED_DESC: "\"Tesak\" will not come to power in Cuba."
+ 
+ ###############
+ ## GAME RULE ##
+ ###############
 
+ INU_AI_BEHAVIOR: "@INU Inuit Nunangat"
+ RULE_INU_test: "Inuit Test"
+ RULE_INU_test_ALLOWED_DESC: "Polar shenanigans will ensue..."
+ RULE_INU_test_BLOCKED_DESC: "The arctic will quitetly go on, business like usual, just as it normally does..."
+ 
  #Russia
  RUS_AI_BEHAVIOR: "@SOV Russian Federation"
  RULE_OPTION_PUTIN: "United Russia"
