--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -760,9 +760,31 @@
  MLW_FOPOL_ZAM.11.d: "" # fix
  MLW_FOPOL_ZAM.11.O1: "A shame we couldn't come together in this."
 
+ MLW_FOPOL_ZAM.2.t: "Malawi Offers a Brotherhood Treaty"
+ MLW_FOPOL_ZAM.2.d: "" # fix
+ MLW_FOPOL_ZAM.2.Y1: "An alliance that will endure."
+ MLW_FOPOL_ZAM.2.N1: "We'll embrace the new millennium solo."
 
+ MLW_FOPOL_ZAM.20.t: "Zambia Signs Brotherhood Treaty"
+ MLW_FOPOL_ZAM.20.d: "" # fix
+ MLW_FOPOL_ZAM.20.O1: "We move forwards together!"
 
+ MLW_FOPOL_ZAM.21.t: "Zambia Rejects the Brotherhood Treaty"
+ MLW_FOPOL_ZAM.21.d: "" # fix
+ MLW_FOPOL_ZAM.21.O1: "The brotherhood will be in our hearts still."
 
+ MLW_FOPOL_ZAM.3.t: "Continuation of the JPCC?"
+ MLW_FOPOL_ZAM.3.d: "" # fix
+ MLW_FOPOL_ZAM.3.Y1: "Permanent means permanent."
+ MLW_FOPOL_ZAM.3.N1: "1982 was so last millennium, a more fluid approach is preferable."
+
+ MLW_FOPOL_ZAM.30.t: "Zambia Affirms JPCC"
+ MLW_FOPOL_ZAM.30.d: "" # fix
+ MLW_FOPOL_ZAM.30.O1: "Every 2 years it is."
+
+ MLW_FOPOL_ZAM.31.t: "Zambia Rips Up JPCC!"
+ MLW_FOPOL_ZAM.31.d: "" # fix
+ MLW_FOPOL_ZAM.31.O1: "A terrible disappointment for diplomacy."
 
 
 
@@ -926,30 +948,28 @@
  MLW_MOZ_refugees: "Mozambican Refugees"
  MLW_MOZ_refugees_desc: ""
 
- # MLW_MOZ_issue_of_the_isles: "The Issue of the Islands"
- # MLW_MOZ_issue_of_the_isles_desc: ""
-
- # MLW_MOZ_not_listening: "They're Not Listening to Us"
- # MLW_MOZ_not_listening_desc: ""
-
- # MLW_MOZ_settle_the_debate: "Settle the Debate"
- # MLW_MOZ_settle_the_debate_desc: ""
-
  # TANZANIA
  MLW_TNZ_relations: "Tanzania"
  MLW_TNZ_relations_desc: ""
 
- # MLW_TNZ_nyaja_malawi: "Lake Malawi, Not Lake Tanzania"
- # MLW_TNZ_nyaja_malawi_desc: ""
+ MLW_TNZ_mtwara: "Mtwara Development Corridor"
+ MLW_TNZ_mtwara_desc: ""
 
- # MLW_TNZ_solidify_holdings: "Solidify Our Grip on the Lakeside"
- # MLW_TNZ_solidify_holdings_desc: ""
+ # THE LAKE WARS
+ MLW_LW_the_lake_wars: "The Lake of Three Names"
+ MLW_LW_the_lake_wars_desc: ""
 
- # MLW_TNZ_formal_borders: "Formalise the Borders"
- # MLW_TNZ_formal_borders_desc: ""
+ # MLW_LW_heligoland_treaty: "Relitigate the Heligoland Treaty"
+ # MLW_LW_heligoland_treaty_desc: ""
 
- # MLW_TNZ_coownership: "Co-ownership of the Lake"
- # MLW_TNZ_coownership_desc: ""
+ # MLW_LW_likoma_islands: "The Issue of the Islands"
+ # MLW_LW_likoma_islands_desc: ""
+
+ # MLW_LW_territorial_changes: "Territorial Changes"
+ # MLW_LW_territorial_changes_desc: ""
+
+ # MLW_LW_land_lake_rights: "Land and Lake Rights"
+ # MLW_LW_land_lake_rights_desc: ""
 
  # ZAMBIA
  MLW_ZAM_relations: "Zambia"
@@ -964,11 +984,11 @@
  MLW_ZAM_blur_the_border: "Blurring the Border"
  MLW_ZAM_blur_the_border_desc: ""
 
- # MLW_ZAM_brother_state: "Our Brother State"
- # MLW_ZAM_brother_state_desc: ""
+ MLW_ZAM_brother_state: "Our Brother State"
+ MLW_ZAM_brother_state_desc: ""
 
- # MLW_ZAM_maintain_JPCC: "Maintain the JPCC"
- # MLW_ZAM_maintain_JPCC_desc: ""
+ MLW_ZAM_maintain_JPCC: "Maintain the JPCC"
+ MLW_ZAM_maintain_JPCC_desc: ""
 
  # MLW_ZAM_troop_coordination: "Train with Zambian Troops"
  # MLW_ZAM_troop_coordination_desc: ""
@@ -1206,7 +1226,9 @@
  # FOCUS TOOLTIPS
  MLW_SAF_relations_TT: "Will add the §Y$MLW_SAF_DM$§! dynamic modifier, which is used to show relations between §YSouth Africa§! and §YMalawi§!"
 
+ # MLW_LW_territorial_changes_TT: ""
 
+ # MLW_LW_land_lake_rights_TT: "Will allow §Y[MLW.GetNameWithFlag]§! to begin utilising any rights to the territories afforded to them during §YThe Lake Wars§!."
 
 
 
