Lake Wars Started
have you ever wanted to go to war over a lake? well now you can

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -862,6 +862,53 @@
  MLW_FOPOL_GCC_opt_out_of_viewing_CONFIRM_TT: "Malawi will be without your money for the rest of game."
  MLW_FOPOL_GCC_opt_out_of_viewing_DENY_TT: "Too many damn things to click, but Malawi is worth the click <3"
 
+ # LAKE WARS
+ MLW_lake_wars: "The Lake Wars"
+ MLW_lake_wars_desc: ""
+
+
+
+ MLW_LW_conflict_status_TITLE_TEXT: "Conflict Resolution Status"
+
+ MLW_LW_diplomacy_status_TITLE_TEXT: "§WDiplomatic Resolution Progress:§!"
+ MLW_LW_diplomacy_status_DESC_TEXT: "This is just an example to show off my progress, but here will be a short description for flavour of the state selected, depending on how well the §Cdiplomatic§! resolutions are going."
+
+
+
+
+
+
+
+
+ MLW_LW_military_status_TITLE_TEXT: "§WMilitaristic Resolution Progress:§!"
+ MLW_LW_military_status_DESC_TEXT: "This is just an example to show off my progress, but here will be a short description for flavour of the state selected, depending on how well the §Rmilitaristic§! resolutions are going."
+
+
+
+
+
+
+
+
+
+
+
+ MLW_LW_select_njombe_button_TEXT: "[1046.GetName]"
+ MLW_LW_select_njombe_button_TT: ""
+ MLW_LW_select_njombe_button_TT_delayed: ""
+
+ MLW_LW_select_mbeya_button_TEXT: "[1045.GetName]"
+ MLW_LW_select_mbeya_button_TT: ""
+ MLW_LW_select_mbeya_button_TT_delayed: ""
+
+ MLW_LW_select_west_niassa_button_TEXT: "[1049.GetName]"
+ MLW_LW_select_west_niassa_button_TT: ""
+ MLW_LW_select_west_niassa_button_TT_delayed: ""
+
+ MLW_LW_select_west_ruvuma_button_TEXT: "[1047.GetName]"
+ MLW_LW_select_west_ruvuma_button_TT: ""
+ MLW_LW_select_west_ruvuma_button_TT_delayed: ""
+
  # SADC FOPOL
 
 
@@ -1325,6 +1372,16 @@
  MLW_additional_EXPENSES_display_TT: "[MLW_MZUZU_EXPENSE][MLW_SADC_TRADING_EXPENSE]"
  MLW_MZUZU_EXPENSE_display_TT: "$$[?MLW_MZ_weekly_expenses|-3] from §YMzuzu Motors§!\n"
  MLW_SADC_EXPENSE_display_TT: "$$[?MLW_SADC_trade_expenses|-3] from §YSADC Trade Deals§!\n"
+
+
+
+
+
+
+
+
+
+
 
 
  # POLITICAL GUIS
