--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1259,7 +1259,7 @@
  china_news.4.a: "Let's see where this goes."
  
  china_news.5.t: "China Institutes \"Democracy with Chinese Characteristics\""
- china_news.5.d: "[CHI.GetLeader] has announced that China will henceforth no longer be a one-party state. Having already removed restrictions on the existing non-CCP political parties, the government has started allowing other parties to register in the country's first free and fair elections. However, [CHI.GetLeader] cautioned against taking this decision as a move by China towards the West. \"While we have decided to accept this Western import of democracy, we are simultaneously determined to preserve China's cultural values and its long-term stability.\""
+ china_news.5.d: "[CHI.GetLeader] has announced that China will henceforth no longer be a one-party state. Having already removed restrictions on the existing non-CPC political parties, the government has started allowing other parties to register in the country's first free and fair elections. However, [CHI.GetLeader] cautioned against taking this decision as a move by China towards the West. \"While we have decided to accept this Western import of democracy, we are simultaneously determined to preserve China's cultural values and its long-term stability.\""
  china_news.5.a: "A historic moment!"
  
  china_news.6.t: "China Joins the World Trade Organization"
@@ -1290,7 +1290,7 @@
  
  china_news.12.t: "[CHI.GetLeader] Pledges to Hold Elections!"
  china_news.12.d: "External observers were shocked today to learn that the People's Republic of China will now be holding elections on a local level. While some have lauded the move as a major step forward in terms of Chinese political liberalization, experts have described this sentiment as overly optimistic given the lack of political reform in other areas of government such as the approaches towards political parties and censorship. One analyst stated that these elections \"will turn out to be nothing more than a reinforcement and legitimization of Communist Party rule\"."
- china_news.12.a: "The CCP will not give up power that easily..."
+ china_news.12.a: "The CPC will not give up power that easily..."
  
  china_news.13.t: "Uighur Militants Launch Knife Attack"
  china_news.13.d: "China was shaken today by a vicious knife attack perpetrated by several Uighur terrorists. Scores of people have been killed or wounded, including the attackers who were shot dead by local police. [CHI.Getleader] has called for calm while promising to hunt down those responsible for this \"barbaric act\"."
@@ -1625,7 +1625,7 @@
  show_countries_that_recognize_the_ROC: "Show Countries that have Recognized the ROC"
  show_countries_that_recognize_the_ROC_desc: "While most countries have switched their recognition from the ROC to the PRC decades ago, a number of them have not. This number is steadily dwindling due to the PRC's charm offensive, wooing these remaining supporters of the ROC with political and economic benefits. The ROC, for its part, has been largely unable to stop this from happening. Recognition is determined by a number of factors including influence, opinion, outlook and form of government."
  declare_independence_taiwan: "Declare Independence"
- declare_independence_taiwan_desc: "Taiwan is not China. This means that it is neither a part of the People's Republic as the CCP claims, nor is it the temporary stronghold of the government of the Republic of China, as the KMT and their allies claim. As such, we should declare our independence and seek to garner international support for our status as the world's newest nation."
+ declare_independence_taiwan_desc: "Taiwan is not China. This means that it is neither a part of the People's Republic as the CPC claims, nor is it the temporary stronghold of the government of the Republic of China, as the KMT and their allies claim. As such, we should declare our independence and seek to garner international support for our status as the world's newest nation."
  recalculate_coalition_support_taiwan: "Update Total Support Values"
 
  southwest_hydroelectricity_dev_category: "Hydroelectricity development in Southwest"
