--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6111,7 +6111,7 @@
  HKG.Autocracy_desc: "Conservative - The New People's Party is widely viewed as an electoral vehicle for the prominent pro-Beijing politician, Regina Ip. Her advocacy of national security legislation and her claims that foreign powers used social media to interfere in protests have made her a controversial figure."
  HKG.anarchist_communism: "£HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)"
  HKG.anarchist_communism_icon: "£HKG_anarchist_communism"
- HKG.anarchist_communism_desc: "Left-Wing Radicalism - The Hong Kong Federation of Trade Unions has for a long time been closely associated with the CCP in China. The trade union played a major role in the 1967 Leftists riots against the British colonial authorities, and today maintains its pro-Beijing, working class position that sets it apart from both the anti-Beijing pan-democrats and the other, more middle class pro-Beijing parties."
+ HKG.anarchist_communism_desc: "Left-Wing Radicalism - The Hong Kong Federation of Trade Unions has for a long time been closely associated with the CPC in China. The trade union played a major role in the 1967 Leftists riots against the British colonial authorities, and today maintains its pro-Beijing, working class position that sets it apart from both the anti-Beijing pan-democrats and the other, more middle class pro-Beijing parties."
  HKG.Neutral_Autocracy: "£HKG_Neutral_Autocracy Democratic Alliance"
  HKG.Neutral_Autocracy_icon: "£HKG_Neutral_Autocracy"
  HKG.Neutral_Autocracy_desc: "Neutral Autocracy - Established in 2001, the Democratic Alliance is among the rare political organizations in Hong Kong that support the Republic of China. It champions anti-communist ideals and economic liberalism while opposing Taiwan independence. Additionally, the party openly protests the de-Chinaization and de-Chiang policies of the DPP."
@@ -6128,22 +6128,22 @@
  HKG.neutral_Social_desc: "Social Democratic - <WIP DESC>"
  HKG.Neutral_Communism: "£HK_Fourth_International Revolutionary Communist Party of China"
  HKG.Neutral_Communism_icon: "£HK_Fourth_International"
- HKG.Neutral_Communism_desc: "Communism - <WIP DESC>"
+ HKG.Neutral_Communism_desc: "Communism - The Revolutionary Communist Party of China (RCPC) originated from \"Left Opposition of the Communist Party of China\" founded in 1931 under the orders of Leon Trotsky. It moved to Hong Kong after the CPC won the Chinese Civil War. In 1985, the Revolutionary Communist Party of China began to participate in the Hong Kong District Council elections."
  HKG.Neutral_green: "£HK_Green Green Party Hong Kong"
  HKG.Neutral_green_icon: "£HK_Green"
  HKG.Neutral_green_desc: "Green - The Green Party of Hong Kong is a small environmentalist party with left-wing ideals. It is a member of the Asia Pacific Greens Federation."
  HKG.Nat_Populism: "£HK_Indigenous Hong Kong Indigenous"
  HKG.Nat_Populism_icon: "£HK_Indigenous"
  HKG.Nat_Populism_desc: "Nationalist Populism - <WIP DESC>"
- HKG.Nat_Fascism: "£HK_National Hong Kong National Party"
+ HKG.Nat_Fascism: "£HK_National Hong Kong National Front"
  HKG.Nat_Fascism_icon: "£HK_National"
- HKG.Nat_Fascism_desc: "Liberal Conservatism - <WIP DESC>"
+ HKG.Nat_Fascism_desc: "Liberal Conservatism - Hong Kong National Front (HKNF) is a pro-independence camp in Hong Kong. The party advocates \"national self-determination\" in accordance with the rights granted by the United Nations International Covenant on Civil and Political Rights. The party is controversial for its radical racist views."
  HKG.Nat_Autocracy: "£HK_People_Power People Power"
  HKG.Nat_Autocracy_icon: "£HK_People_Power"
- HKG.Nat_Autocracy_desc: "Liberal Nationalism - <WIP DESC>"
+ HKG.Nat_Autocracy_desc: "Liberal Nationalism - People Power is an extreme right-wing pro-democracy camp political party in Hong Kong. The party is committed to promoting direct democracy and the perpetuation of the Basic Law in Hong Kong, strengthening Hong Kong's autonomy and maintaining Hong Kong's unique position in China."
  HKG.Monarchist: "£HK_Conservative_Alt_New Conservative Party"
  HKG.Monarchist_icon: "£HK_Conservative_Alt_New"
- HKG.Monarchist_desc: "Hong Kong-UK Reunification Campaign - <WIP DESC>"
+ HKG.Monarchist_desc: "Hong Kong-UK Reunification Campaign - The Conservative Party has its origins in the rise of localism in Hong Kong, which advocates the return of Hong Kong to British colonial rule, while at the same time is committed to preserving and safeguarding Hong Kong's culture, and endeavouring to build a relationship of mutual trust and co-operation with the United Kingdom."
 
 #The localists are a political grouping that encompasses a wide-range of different parties, united by their desire for self-determination in Hong Kong. Groups like Youngspiration, Demosisto and the Hong Kong National Party came to the fore during the 2014 Hong Kong protests, and represent a new, more radical and more populist brand of Hong Kong politics, one that is marred by controversy. Some localists advocate for a preservation of Hong Kong's unique culture, others for restrictions on tourism and immigration from the mainland. Some of the more extreme localists advocate independence or even a temporary return to British rule as a transitionary measure. Regardless, they are viewed with admiration by a significant proportion of the youth and disapproval verging on disgust by the older segment of the population.
  HOL.conservatism: "£HOL_western_conservative Christen-Democratisch Appel (CDA)"
