--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -246,6 +246,8 @@
  HOL_buildings_worker_requirement_modifier_tt: "All Buildings Worker Requirements: [?HOL_buildings_worker_requirement_modifier_change|%-] \n "
  HOL_corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
  HOL_corruption_cost_factor_tt: "£corruption_cost_factor_texticon Cost to change Corruption: [?HOL_corruption_cost_factor_change|%+] \n "
+ HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR: "£slot_texticon  Building Slots from Infrastructure"
+ HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR_Change: "£slot_texticon  Building Slots from Infrastructure: [?HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR_change|%+] \n "
  ### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
