--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -246,8 +246,14 @@
  HOL_buildings_worker_requirement_modifier_tt: "All Buildings Worker Requirements: [?HOL_buildings_worker_requirement_modifier_change|%-] \n "
  HOL_corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
  HOL_corruption_cost_factor_tt: "£corruption_cost_factor_texticon Cost to change Corruption: [?HOL_corruption_cost_factor_change|%+] \n "
- HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR: "£slot_texticon  Building Slots from Infrastructure"
- HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR_Change: "£slot_texticon  Building Slots from Infrastructure: [?HOL_MODIFIER_SLOTS_FROM_INFRASTRUCTURE_FACTOR_change|%+] \n "
+ HOL_global_building_slots_factor: "£civ_factory  Max Factories in a State"
+ HOL_global_building_slots_factor_tt: "£civ_factory  Max Factories in a State: [?HOL_global_building_slots_factor_change|%+] \n "
+ HOL_consumer_goods_factor: "£consumer_goods_texticon  Tax Cost Factor"
+ HOL_consumer_goods_factor_tt: "£consumer_goods_texticon  Tax Cost Factor: [?HOL_consumer_goods_factor_change|%-] \n "
+ HOL_research_speed_factor: "£research_speed_texticon Research Speed"
+ HOL_research_speed_factor_tt: "£research_speed_texticon Research Speed: [?HOL_research_speed_factor_change|%+] \n "
+ HOL_production_speed_buildings_factor: "£construction_speed_texticon Construction Speed"
+ HOL_production_speed_buildings_factor_tt: "£construction_speed_texticon Construction Speed: [?HOL_production_speed_buildings_factor_change|%+] \n "
  ### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
