--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -232,8 +232,12 @@
  HOL_Change_Army_Spirit_TT: "Modify §HKoninklijke Landmacht§! by \n"
  HOL_Kringlooplandbouw_modifier: "Kringlooplandbouw Province"
  HOL_Randstad_Productivity: "Randstad Power"
- HOL_ING_Group_Strategies_modifier: "ING Group"
- HOL_ING_Group_Strategies_modifier_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
+ HOL_ING_Group_Strategies_modifier1: "ING Group"
+ HOL_ING_Group_Strategies_modifier1_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
+ HOL_ING_Group_Strategies_modifier2: "ING Group"
+ HOL_ING_Group_Strategies_modifier2_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
+ HOL_ING_Group_Strategies_modifier3: "ING Group"
+ HOL_ING_Group_Strategies_modifier3_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
  HOL_Change_ING_Spirit_TT: "Modify §HING Group§! by \n"
  HOL_Postbank_ING_gain_modifier_tt: "Add §HING Group§!, which grants ( £construction_speed_texticon §Y$offices$§! construction speed: [?0.05|%+] , §Y£corporate_tax_income_multiplier_modifier_texticon §YCorporate Tax Revenue§! Multiplier: [?0.05|%+] , £corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier: [?0.05|%+] )"
  HOL_production_speed_offices_factor: "£construction_speed_texticon §Y$offices$§! construction speed"
@@ -254,6 +258,14 @@
  HOL_research_speed_factor_tt: "£research_speed_texticon Research Speed: [?HOL_research_speed_factor_change|%+] \n "
  HOL_production_speed_buildings_factor: "£construction_speed_texticon Construction Speed"
  HOL_production_speed_buildings_factor_tt: "£construction_speed_texticon Construction Speed: [?HOL_production_speed_buildings_factor_change|%+] \n "
+ HOL_offices_productivity: "§Y$offices$§! Productivity"
+ HOL_offices_productivity_tt: "§Y$offices$§! Productivity: [?HOL_offices_productivity_change|%+] \n "
+ HOL_ING_trade_opinion_factor: "£trade_deal_opinion_texticon  Trade deal opinion factor"
+ HOL_ING_trade_opinion_factor_tt: "£trade_deal_opinion_texticon  Trade deal opinion factor: [?HOL_ING_trade_opinion_factor_change|%+] \n "
+ HOL_tax_gain_multiplier_modifier: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier"
+ HOL_tax_gain_multiplier_modifier_tt: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier: [?HOL_tax_gain_multiplier_modifier_change|%+] \n "
+ HOL_return_on_investment_modifier: "£return_on_investment_modifier_texticon §YReturn on Investment§!"
+ HOL_return_on_investment_modifier_tt: "£return_on_investment_modifier_texticon §YReturn on Investment§!: [?HOL_return_on_investment_modifier_change|%+] \n "
  ### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
