--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -266,7 +266,13 @@
  HOL_tax_gain_multiplier_modifier_tt: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier: [?HOL_tax_gain_multiplier_modifier_change|%+] \n "
  HOL_return_on_investment_modifier: "£return_on_investment_modifier_texticon §YReturn on Investment§!"
  HOL_return_on_investment_modifier_tt: "£return_on_investment_modifier_texticon §YReturn on Investment§!: [?HOL_return_on_investment_modifier_change|%+] \n "
- ### Events
+ HOL_interest_rate_multiplier_modifier: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!"
+ HOL_interest_rate_multiplier_modifier_tt: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!: [?HOL_interest_rate_multiplier_modifier_change|%+] \n "
+ HOL_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed"
+ HOL_production_speed_synthetic_refinery_factor_tt: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed: [?HOL_production_speed_synthetic_refinery_factor_change|%+] \n "
+ HOL_econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier"
+ HOL_econ_cycle_upg_cost_multiplier_modifier_tt: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier: [?HOL_econ_cycle_upg_cost_multiplier_modifier_change|%+] \n "
+### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
  HOL_Borsele.a: "Go Nuclear"
