--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -267,11 +267,11 @@
  HOL_return_on_investment_modifier: "£return_on_investment_modifier_texticon §YReturn on Investment§!"
  HOL_return_on_investment_modifier_tt: "£return_on_investment_modifier_texticon §YReturn on Investment§!: [?HOL_return_on_investment_modifier_change|%+] \n "
  HOL_interest_rate_multiplier_modifier: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!"
- HOL_interest_rate_multiplier_modifier_tt: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!: [?HOL_interest_rate_multiplier_modifier_change|%+] \n "
+ HOL_interest_rate_multiplier_modifier_tt: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!: [?HOL_interest_rate_multiplier_modifier_change|%-] \n "
  HOL_production_speed_synthetic_refinery_factor: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed"
  HOL_production_speed_synthetic_refinery_factor_tt: "£construction_speed_texticon  §Y$synthetic_refinery$§! construction speed: [?HOL_production_speed_synthetic_refinery_factor_change|%+] \n "
  HOL_econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier"
- HOL_econ_cycle_upg_cost_multiplier_modifier_tt: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier: [?HOL_econ_cycle_upg_cost_multiplier_modifier_change|%+] \n "
+ HOL_econ_cycle_upg_cost_multiplier_modifier_tt: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier: [?HOL_econ_cycle_upg_cost_multiplier_modifier_change|%-] \n "
 ### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
@@ -319,4 +319,5 @@
 
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
- HOL_ING_Group_strategy_category_desc: ""
+ HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
+ HOL_ING_Group_Strategy_upgrade_in_progress_flag: "ING Strategy Deployed"
